# ocaml-serialization-bench

./: .envrc  LICENSE  README.md  dune-project  ocaml_serialization_bench.opam
bench_bin_prot/: dune  main.ml
bench_capnproto/: dune  main.ml  message.capnp
serializable/: dune  serializable.ml
